# travel-agent

./: CONTRIBUTING.md  Dockerfile.agent  README.md  docker-compose.yml  mkdocs.yml  openapi.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-and-push.yml
docs/: index.md  modules.md
tests/: test_main.py
travel_agent/: __init__.py  __main__.py  __version__.py  agent_config.json  main.py
travel_agent/skills/travel-planner/: skill.yaml
