[project]
name = "travel-agent"
version = "0.1.0"
description = "AI-powered travel planning assistant providing comprehensive itinerary creation, destination research, accommodation booking, activity curation, and logistical planning. Integrates Exa search for destination insights and MCP tools for Airbnb and Google Maps."
authors = [{ name = "Paras Chamoli", email = "paras25619@gmail.com" }]
readme = "README.md"
keywords = ["python", "ai", "travel", "planning", "itinerary", "agno", "bindu", "exa", "mcp", "memory", "vector-database"]
requires-python = ">=3.12,<3.13"

dependencies = [
    "bindu>=2026.8.5",
    "agno>=2.2.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "openai>=2.11.0",
    "exa-py>=2.0.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.44",
    "mem0ai>=1.0.1",
    "mcp>=1.26.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Scheduling",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://Paraschamoli.github.io/travel-agent/"
Repository = "https://github.com/Paraschamoli/travel-agent"
Documentation = "https://github.com/Paraschamoli/travel-agent#readme"
Issues = "https://github.com/Paraschamoli/travel-agent/issues"
Changelog = "https://github.com/Paraschamoli/travel-agent/releases"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "ty>=0.0.1a16",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.5",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
    "types-requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["travel_agent"]

[tool.ty.environment]
python = "./.venv"
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["travel_agent"]
